--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ nav{
     font-size: 1.5rem;
     letter-spacing: -0.33px;
     padding-bottom: 1rem;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .social-links{
@@ -81,6 +83,7 @@ nav{
 
 .github svg, .linkedin svg{
     color: white;
+    transition: 0.4s;
 }
 
 .upwork svg{
@@ -141,6 +144,7 @@ nav{
     height: 2rem;
     padding: 0 0 2rem 0;
     cursor: pointer;
+    transition: 0.4s;
 }
 
 .contact-button:hover, .view-project:hover, .view-code:hover, .send-email-button:hover{
@@ -337,6 +341,17 @@ footer{
     font-size: 1rem;
     text-align: center;
     padding: 1.75rem 0 0.75rem 0;
+}
+
+.site-link{
+    color: #d9d9d9;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    transition: 0.4s;
+}
+
+.site-link:hover{
+    color: #4EE1A0;
 }
 
 @media (min-width: 50em){
